Fixed alignment

--- a/assets/style.css
+++ b/assets/style.css
@@ -30,6 +30,11 @@ body{
     display:none;
 }
 
+.navbar-top-container{
+    width:100%;
+    background-color: #383131;
+}
+
 .navbar-main h1{
     color:white;
     font-size: 16px;
